添加新东西

--- a/1.0 2/GQapp/Podfile
+++ b/1.0 2/GQapp/Podfile
@@ -16,7 +16,9 @@ target 'newGQapp' do
 
     # 腾讯 Bugly
     pod 'Bugly', '~> 2.4.6'
-
+    
+    pod 'YYModel', '~> 1.0.4'
+    pod 'CYLTabBarController', '~> 1.17.4'
 
     pod 'Masonry', '~> 1.0.1'
     pod 'UITableView+FDTemplateLayoutCell'
