--- a/1.0 2/GQapp/GQapp/Info.plist
+++ b/1.0 2/GQapp/GQapp/Info.plist
@@ -81,7 +81,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>8</string>
+	<string>2018042401</string>
 	<key>LSApplicationCategoryType</key>
 	<string></string>
 	<key>LSApplicationQueriesSchemes</key>
