--- a/1.0 2/GQapp/Podfile
+++ b/1.0 2/GQapp/Podfile
@@ -38,6 +38,8 @@ target 'newGQapp' do
 #    pod 'JPFPSStatus', '~> 0.1'
 #  pod 'GDPerformanceView', '~> 1.3.1'
     pod 'SocketRocket'
+    
+#    pod 'Aspects' # 收集使用
 
 end
 
