--- a/1.0 2/GQapp/Podfile
+++ b/1.0 2/GQapp/Podfile
@@ -39,7 +39,7 @@ target 'newGQapp' do
 #  pod 'GDPerformanceView', '~> 1.3.1'
     pod 'SocketRocket'
     
-#    pod 'Aspects' # 收集使用
+    pod 'Aspects' # 收集使用
 
 end
 
