--- a/1.0 2/GQapp/GQapp/Info.plist
+++ b/1.0 2/GQapp/GQapp/Info.plist
@@ -58,7 +58,7 @@
 			<string>qq</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>QQ1105959319</string>
+				<string>QQ41F2F5CD</string>
 			</array>
 		</dict>
 		<dict>
@@ -68,7 +68,7 @@
 			<string>tencent</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>tencent1105959319</string>
+				<string>tencent1106441677</string>
 			</array>
 		</dict>
 		<dict>
