--- a/1.0 2/GQZhiBo/Podfile
+++ b/1.0 2/GQZhiBo/Podfile
@@ -39,6 +39,7 @@ target 'GQZhiBo' do
 #    pod 'JPFPSStatus', '~> 0.1'
 #  pod 'GDPerformanceView', '~> 1.3.1'
     pod 'SocketRocket'
+    pod 'YYWebImage'
     
 
 end
