--- a/1.0 2/GQZhiBo/GQZhiBo/Info.plist
+++ b/1.0 2/GQZhiBo/GQZhiBo/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>滚球体育</string>
+	<string>连红体育</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIcons~ipad</key>
